// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Most read should render ltr correctly 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  font-size: 1.75rem;
  line-height: 2rem;
  font-family: ReithSerif,Helvetica,Arial,sans-serif;
  font-weight: 300;
  font-style: normal;
  color: #B80000;
  margin: 0;
  padding-bottom: 0.5rem;
  display: inline-block;
  min-width: 3rem;
}

.c2 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSerif,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-style: normal;
  color: #222222;
  margin: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  padding-bottom: 0.5rem;
}

.c2:hover,
.c2:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  cursor: pointer;
}

@media (max-width:37.5rem) {
  .c0 {
    margin-top: 4px;
  }
}

@media (min-width:37.5rem) {
  .c0 {
    margin-top: 6px;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c1 {
    font-size: 2rem;
    line-height: 2.25rem;
  }
}

@media (min-width:37.5rem) {
  .c1 {
    font-size: 2.75rem;
    line-height: 3rem;
  }
}

@media (min-width:37.5rem) {
  .c1 {
    width: 4rem;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c2 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:37.5rem) {
  .c2 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

<div
  class="c0"
  dir="ltr"
>
  <p
    class="c1"
    dir="ltr"
  >
    1
  </p>
  <a
    class="c2"
    dir="ltr"
    href="https://www.bbc.com/vietnamese/institutional-49283563"
  >
    John Lewis staff bonus cut again as profits fall
  </a>
</div>
`;

exports[`Most read should render rtl correctly 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  font-size: 2rem;
  line-height: 2.625rem;
  font-family: "BBC Nassim Persian",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #B80000;
  margin: 0;
  padding-bottom: 0.5rem;
  display: inline-block;
  min-width: 3rem;
}

.c2 {
  font-size: 1rem;
  line-height: 1.625rem;
  font-family: "BBC Nassim Persian",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 700;
  font-style: normal;
  color: #222222;
  margin: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  padding-bottom: 0.5rem;
}

.c2:hover,
.c2:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  cursor: pointer;
}

@media (max-width:37.5rem) {
  .c0 {
    margin-top: 4px;
  }
}

@media (min-width:37.5rem) {
  .c0 {
    margin-top: 6px;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c1 {
    font-size: 2.375rem;
    line-height: 2.875rem;
  }
}

@media (min-width:37.5rem) {
  .c1 {
    font-size: 2.75rem;
    line-height: 3.375rem;
  }
}

@media (min-width:37.5rem) {
  .c1 {
    width: 4rem;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c2 {
    font-size: 1.25rem;
    line-height: 1.625rem;
  }
}

@media (min-width:37.5rem) {
  .c2 {
    font-size: 1.25rem;
    line-height: 1.625rem;
  }
}

<div
  class="c0"
  dir="rtl"
>
  <p
    class="c1"
    dir="rtl"
  >
    1
  </p>
  <a
    class="c2"
    dir="rtl"
    href="https://www.bbc.com/vietnamese/institutional-49283563"
  >
    ایران از لغو 'رزمایش قطع اینترنت' خبر داد
  </a>
</div>
`;
